2007-11-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: for DomainKeys signatures, use the message
   sender as the identity
 * lib/Mail/DKIM/DkSignature.pm: allow verifier to supply the signing
   identity
 * lib/Mail/DKIM/Verifier.pm, PublicKey.pm: hack for allowing
   DomainKeys signatures to use public keys with empty g= tags

2007-11-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm, Signer.pm: update documentation for
   message_sender() and message_originator() methods, which are now
   guaranteed to return an object
 * lib/Mail/DKIM/Common.pm (message_sender, message_originator):
   always return a Mail::Address object, even if the relevant headers
   were not found
 * t/corpus/dk_headers_2.txt renamed to bad_dk_2.txt: it turns out this
   message should've been failing all along, since the Sender header
   doesn't match the domain of the signature
 * lib/Mail/DKIM/Verifier.pm: slight change to the "unsupported version"
   detail message (don't want nested parenthesis)

2007-11-14: Jason Long <jlong@messiah.edu>
 * t/corpus/goodkey_4.txt: tests signature with i=a@b, public key implied g=
 * lib/Mail/DKIM/PublicKey.pm (check_granularity): fixed broken
   ends-with check, reported by Mark Martinec
 * t/corpus/good_dk_3.txt, good_dk_4.txt, good_dk_5.txt:
   these files test DomainKeys signatures with g= values in the public keys
 * t/corpus/bad_dk_1.txt: this one should fail, since the signature
   domain does not match the From/Sender header
 * scripts/dkimsign.pl: added option to override signature's d= tag
 * t/corpus/badkey_11.txt: tests a valid, but unmatched h= in public key

2007-11-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/relaxed.pm,
   lib/Mail/DKIM/Canonicalization/nowsp.pm,
   lib/Mail/DKIM/Canonicalization/DkCommon.pm,
   lib/Mail/DKIM/Canonicalization/dk_simple.pm,
   lib/Mail/DKIM/Canonicalization/simple.pm,
   lib/Mail/DKIM/Canonicalization/dk_nofws.pm,